--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
                 background-color: var(--secondary);
             }
 
+            .link-btn.deletion {
+                background-color: #f44336;
+            }
+
+            .link-btn.deletion:hover {
+                background-color: #d32f2f;
+            }
+
             footer {
                 margin-top: 2rem;
                 text-align: center;
@@ -110,16 +118,16 @@
 
         <div class="container">
             <h1>Welcome, You’re All Set!</h1>
-            <p>
-                Your email has been verified successfully. Now, you're ready to
-                start using Campus Hub!
-            </p>
+
             <div class="links">
                 <a href="privacy-policy.html" class="link-btn privacy"
                     >Privacy Policy</a
                 >
                 <a href="terms-and-conditions.html" class="link-btn terms"
                     >Terms and Conditions</a
+                >
+                <a href="contact.html" class="link-btn deletion"
+                    >Request Data Deletion</a
                 >
             </div>
         </div>
