--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <style>
             body {
                 font-family: Arial, sans-serif;
-                background-color: #f4f4f4;
+                background-color: #ffffff;
                 color: #333;
                 text-align: center;
                 padding: 50px;
