--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -7,7 +7,7 @@
         <style>
             :root {
                 --text: #010c10;
-                --background: #f2fbfe;
+                --background: #ffffff;
                 --primary: #26b0f0;
                 --secondary: #f683a7;
                 --accent: #f39655;
