--- a/welcome.html
+++ b/welcome.html
@@ -7,7 +7,7 @@
         <style>
             body {
                 font-family: Arial, sans-serif;
-                background-color: #f2fbfe;
+                background-color: #ffffff;
                 color: #010c10;
                 margin: 0;
                 padding: 0;
