--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
                 line-height: 1.5;
             }
 
+            .download {
+                align-self: center;
+            }
+
             iframe {
                 border: none;
                 border-radius: 1rem;
@@ -91,6 +95,18 @@
             also promotes sustainability by reusing books, reducing waste, and
             indirectly contributing to saving trees.
         </span>
+
+        <a
+            href="https://play.google.com/store/apps/details?id=com.brijenmakwana.campushub&pcampaignid=web_share"
+            target="_blank"
+            class="download"
+        >
+            <img
+                alt="Get it on Google Play"
+                src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"
+                width="300"
+            />
+        </a>
 
         <iframe
             src="https://www.youtube.com/embed/kcXzDxx9RU4"
