--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </a>
 
         <iframe
-            src="https://www.youtube.com/embed/kcXzDxx9RU4"
+            src="https://youtu.be/3_jW_nPF2Jk"
             title="Campus Hub"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
