youtube video link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Campus Hub - Welcome</title>
+        <title>Campus Hub</title>
         <style>
             html,
             body {
@@ -109,7 +109,7 @@
         </a>
 
         <iframe
-            src="https://youtu.be/3_jW_nPF2Jk"
+            src="https://www.youtube.com/embed/3_jW_nPF2Jk"
             title="Campus Hub"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
